Bug 429052 - Right click menu slow to appear the first time it's invoked
Summary: Right click menu slow to appear the first time it's invoked
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Application Launcher (Kickoff) widget (other bugs)
Version First Reported In: 5.20.2
Platform: Other Linux
: NOR minor
Target Milestone: 1.0
Assignee: David Edmundson
URL:
Keywords: usability
: 417916 467474 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-11-13 09:56 UTC by medin
Modified: 2023-04-04 20:23 UTC (History)
13 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.27
Sentry Crash Report:


Attachments
video 1 (216.65 KB, video/mp4)
2020-11-13 09:56 UTC, medin
Details
video 2 (229.97 KB, video/mp4)
2020-11-13 09:56 UTC, medin
Details
not happening anymore for me (616.13 KB, video/mp4)
2021-05-07 08:05 UTC, Lua
Details

Note You need to log in before you can comment on or make changes to this bug.
Description medin 2020-11-13 09:56:38 UTC
Created attachment 133291 [details]
video 1

When I right click the first time on any favorite item or any app in kicker menu, the contextual menu is taking long time to appear. See attached video for more info.
The second right click is much faster than the first one.
Comment 1 medin 2020-11-13 09:56:57 UTC
Created attachment 133292 [details]
video 2
Comment 2 David Redondo 2020-11-13 13:07:12 UTC
According to hotspot, on my system we spend almost 900ms loading the Appstream Pool which is loaded on first access.
Comment 4 Patrick Silva 2020-11-13 19:57:30 UTC
*** Bug 417916 has been marked as a duplicate of this bug. ***
Comment 5 Patrick Silva 2020-11-13 19:58:10 UTC
This issue also affects kickoff.
Comment 6 Patrick Silva 2021-02-24 12:47:28 UTC
This issue is still reproducible with kickoff and kicker after I restart Plasma
with "plasmashell --replace".


Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.21.80
KDE Frameworks Version: 5.80.0
Qt Version: 5.15.2
Graphics Platform: Wayland
Comment 7 Patrick Silva 2021-02-24 13:40:17 UTC
Also reproducible immediately after login.
At least kickoff is also affected on Arch linux.

Operating System: Arch Linux
KDE Plasma Version: 5.21.1
KDE Frameworks Version: 5.79.0
Qt Version: 5.15.2
Graphics Platform: X11
Comment 8 Nate Graham 2021-02-24 14:26:37 UTC
Yeah can confirm. :(
Comment 9 medin 2021-03-02 22:39:12 UTC
(In reply to Nate Graham from comment #8)
> Yeah can confirm. :(

It's even reproducible with the new launcher in 5.21.
Comment 10 Nate Graham 2021-03-03 00:36:58 UTC
Yes, nothing about this changed with the new menu.
Comment 11 Lua 2021-05-07 08:05:36 UTC
Created attachment 138212 [details]
not happening anymore for me

Not happening anymore. Was it fixed?

Operating System: Kubuntu 21.04
KDE Plasma Version: 5.21.4
KDE Frameworks Version: 5.80.0
Qt Version: 5.15.2
Kernel Version: 5.11.0-16-generic
OS Type: 64-bit
Graphics Platform: X11
Processors: 8 × Intel® Core™ i5-8265U CPU @ 1.60GHz
Memory: 15,5 GiB of RAM
Graphics Processor: Mesa Intel® UHD Graphics 620
Comment 12 medin 2021-05-07 12:01:55 UTC
(In reply to Ninguém from comment #11)

> Not happening anymore. Was it fixed?

This problem happens only the first time (directly after fresh boot) when you right click on any item in app launcher.
Comment 13 Patrick Silva 2021-06-25 15:01:01 UTC
possibly related: Application Dashboard and krunner take a few
seconds to open for the first time after login on Arch Linux (Plasma 5.22.2) and neon unstable.

Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.22.80
KDE Frameworks Version: 5.84.0
Qt Version: 5.15.3
Graphics Platform: Wayland
Comment 14 Nate Graham 2021-07-23 16:20:15 UTC
This is fixed in the code rewrite for Plasma 5.23!
Comment 15 Alessandro Astone 2021-09-21 07:05:49 UTC
This is still present in 5.22.90.
Consistently reproducible with the first right-click after login.
Comment 16 Nate Graham 2021-09-21 17:14:03 UTC
Yeah, I can actually reproduce it :(
Comment 17 Patrick Silva 2022-06-16 02:12:59 UTC
I'm unable to reproduce with kicker or kickoff after recent updates on neon unstable.

Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.25.80
KDE Frameworks Version: 5.96.0
Qt Version: 5.15.4
Graphics Platform: Wayland
Comment 18 Nate Graham 2022-06-16 17:42:08 UTC
Indeed, neither can I. Must have been fixed with some KWin change in current git master.
Comment 19 Patrick Silva 2022-07-07 11:20:17 UTC
Unfortunately it's still reproducible on neon unstable with the first right-click after login. But currently the delay does not occur consistently.

Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.25.80
KDE Frameworks Version: 5.96.0
Qt Version: 5.15.5
Graphics Platform: Wayland
Comment 20 Nate Graham 2022-07-07 15:49:20 UTC
I can reproduce that it only happens the first time after login.
Comment 21 medin 2022-07-16 11:08:19 UTC
It's still happening with:
Operating System: Manjaro Linux
KDE Plasma Version: 5.25.80
KDE Frameworks Version: 5.97.0
Qt Version: 5.15.5
Kernel Version: 5.18.12-1-MANJARO (64-bit)
Graphics Platform: X11
Comment 22 thwomp000 2022-09-09 19:40:39 UTC
This is happening to me, it lags the first time after boot.
Kubuntu 22.04
KDE Plasma Version: 5.24.4
KDE Frameworks Version: 5.92.0
Qt Version: 5.15.3
Graphics platform: X11
Comment 23 Bug Janitor Service 2022-11-25 10:27:48 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/2359
Comment 24 Nate Graham 2022-11-26 17:25:37 UTC
Git commit 0b47416af0ac41a705000e53d867406d27774b05 by Nate Graham, on behalf of David Redondo.
Committed on 26/11/2022 at 17:13.
Pushed by ngraham into branch 'master'.

kicker: Load appstream pool not on menu construction

Loading the appstream pool has a potential high cost if the cache
is not up to date. When this happens there is noticeable delay
between the right click happening and the menu being shown. Instead
move the cost to when invoking the action.

M  +20   -21   applets/kicker/plugin/actionlist.cpp
M  +1    -1    applets/kicker/plugin/actionlist.h
M  +1    -1    applets/kicker/plugin/appentry.cpp
M  +1    -1    applets/kicker/plugin/runnermatchesmodel.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/0b47416af0ac41a705000e53d867406d27774b05
Comment 25 Tom Strausbaugh 2022-12-08 04:55:46 UTC
This is happening to me as well. When logged in Right clicking the desktop there is a 5-6 second delay. Subsequent right clicks seem fine. Right clicking between monitors/desktops causes the lag too. I noticed though after a few minutes of the system running it go back the normal with instant right clicks. Thanks.

Fedora 37
KDE Plasma Version: 5.26.4
KDE Frameworks Version: 5.100.0
Qt Version: 5.15.7
Graphics platform: Wayland
Comment 26 Nate Graham 2022-12-08 05:23:10 UTC
It's already fixed for 5.27.
Comment 27 Tom Strausbaugh 2022-12-08 05:26:03 UTC
(In reply to Nate Graham from comment #26)
> It's already fixed for 5.27.

Great! Thanks Nate.
Comment 28 tsengalb99 2023-01-12 22:54:53 UTC
I am having the same issue in 5.26.5. What is the recommended course of actual before 5.27 is released? Also, I get the issue after switching to another window and clicking back on the desktop.
Comment 29 Nate Graham 2023-01-13 01:14:34 UTC
Some options I can think of:

1. Download plasma-workspace source code, patch it with https://invent.kde.org/plasma/plasma-workspace/commit/0b47416af0ac41a705000e53d867406d27774b05 then build it from source for yourself

2. Convince your distro to backport https://invent.kde.org/plasma/plasma-workspace/commit/0b47416af0ac41a705000e53d867406d27774b05 to their plasma-workspace package and ship it out as an update

3. Wait for Plasma 5.27
Comment 30 Nate Graham 2023-04-04 20:23:26 UTC
*** Bug 467474 has been marked as a duplicate of this bug. ***