kicker: Load appstream pool not on menu construction

Loading the appstream pool has a potential high cost if the cache
is not up to date. When this happens there is noticeable delay
between the right click happening and the menu being shown. Instead
move the cost to when invoking the action.
BUG:429052